--- a/index.html
+++ b/index.html
@@ -721,7 +721,7 @@ margin-left: 13px;
 <!--patrocinio 17-->
 <div class="patrocinio-level6">
     <div class="patrocionio6">
-   <video class="video-patron-dis" poster="banner1.png" muted autoplay loop src="trailer.mp4"></video>
+   <video class="video-patron-dis" poster="banner1.png" muted autoplay controls loop src="trailer.mp4"></video>
    
     </div>
 </div>
